@@ -1,3 +1,10 @@
+2004-11-16 Alain Magloire
+	FIX for 27663
+	* utils/org/eclipse/cdt/utils/pty/PTY.java
+	* utils/org/eclipse/cdt/utils/spawner/ProcessFactory.java
+	* utils/org/eclipse/cdt/utils/spawner/Spawner.java
+	* utils/org/eclipse/cdt/utils/spawner/SpawnerInputStream.java
+
 2004-11-14 Alain Magloire
 	Fix for PR 77546.
 	Make the error parser manager faster by
